crates/solidity-v2/testing/snapshots/cst_output/UsingDirective/user_defined_operator/generated/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.19'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/UsingDirective/user_defined_operator/input.sol:2:12]
   │
 2 │ using {div as /} for Int global;
   │            ──┬─  
   │              ╰─── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            UsingDirective(
                UsingDirectiveStruct {
                    using_keyword: UsingKeyword {
                        range: 111..116,
                    },
                    clause: UsingDeconstruction(
                        UsingDeconstructionStruct {
                            open_brace: OpenBrace {
                                range: 117..118,
                            },
                            symbols: UsingDeconstructionSymbols {
                                elements: [
                                    UsingDeconstructionSymbolStruct {
                                        name: IdentifierPath {
                                            elements: [
                                                Identifier(
                                                    Identifier {
                                                        range: 118..121,
                                                    },
                                                ),
                                            ],
                                        },
                                        alias: Some(
                                            UsingAliasStruct {
                                                as_keyword: AsKeyword {
                                                    range: 122..124,
                                                },
                                                operator: Slash(
                                                    Slash {
                                                        range: 125..126,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                            close_brace: CloseBrace {
                                range: 126..127,
                            },
                        },
                    ),
                    for_keyword: ForKeyword {
                        range: 128..131,
                    },
                    target: TypeName(
                        IdentifierPath(
                            IdentifierPath {
                                elements: [
                                    Identifier(
                                        Identifier {
                                            range: 132..135,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ),
                    global_keyword: Some(
                        GlobalKeyword {
                            range: 136..142,
                        },
                    ),
                    semicolon: Semicolon {
                        range: 142..143,
                    },
                },
            ),
        ],
    },
}
